--- a/views/home.html
+++ b/views/home.html
@@ -9,7 +9,7 @@
     <link href= css/style.css rel="stylesheet">
 </head>
 <body>
-    <header><img width="450" src="images/logo-mercado-liebre.jpg">
+    <header><img cwidth="450" src="images/logo-mercado-liebre.jpg">
         <div class="titulares"><input type='text'></div>
         <div class="titulares"><i class="fas fa-search"></i></div>
         <div class="titulares"><span><i class="fas fa-hand-holding-usd"></i></span> Compra en Cuotas</div>
@@ -30,7 +30,7 @@
                 <i class="fas fa-bars"></i>
                 </div></div></header>
     <main>
-            <img id="banner" width="10000" src="images/img-home-banner.jpg">
+            <img id="banner" src="images/img-home-banner.jpg">
             <section><h3 class="secciones">Basado en tu última visita</h3>
 
                 <article>
