--- a/views/home.html
+++ b/views/home.html
@@ -9,18 +9,18 @@
     <link href= css/style.css rel="stylesheet">
 </head>
 <body>
-    <header><img cwidth="450" src="images/logo-mercado-liebre.jpg">
-        <div class="titulares"><input type='text'></div>
+    <header><div class="busqueda"><img id="logoml" src="images/logo-mercado-liebre.jpg">
+        <div class="lupa"><div class="titulares"><input type='text'></div>
         <div class="titulares"><i class="fas fa-search"></i></div>
-        <div class="titulares"><span><i class="fas fa-hand-holding-usd"></i></span> Compra en Cuotas</div>
+        <div class="titulares"><span><i class="fas fa-hand-holding-usd"></i></span> Compra en Cuotas</div></div></div>
             <nav>
-                <ul>
+                <ul class="barraul">
                     <li>Ofertas</li>
                     <li>Tiendas Oficiales</li>
                     <li>Vender</li>
                     <li>Ayuda</li>
                 </ul>
-                <ul>
+                <ul class="barraul">
                     <li>Crea tu cuenta<span> <i class="far fa-id-card"></i></span></li>
                     <li>Ingresá<span> <i class="fas fa-sign-in-alt"></i></span></li>
                     <li>Mis Compras<span> <i class="fas fa-shopping-basket"></i></span></li>
@@ -31,11 +31,12 @@
                 </div></div></header>
     <main>
             <img id="banner" src="images/img-home-banner.jpg">
-            <section><h3 class="secciones">Basado en tu última visita</h3>
+            <h3 class="secciones">Basado en tu última visita</h3>
+            <section>
 
                 <article>
                     <img width="300" src="images/cafetera.jpg"/>
-                <div class="descripcion">
+                    <div class="descripcion">
                     <p class="descuentos">40% OFF</p>
                     <p class="precios">$35.000</p>
                     <h4>Cafetera Moulinex</h4></div>
@@ -53,9 +54,9 @@
                     <p class="descuentos">10% OFF</p>
                     <p class="precios">$70.500</p>
                     <h4>Samsung Galaxy S10</h4></div>
-                </article>
+                </article></section>
                 <h3 class="secciones">Ofertas</h3>
-                <article>
+                <section><article>
                     <img width="300" src="images/cafetera.jpg"/>
                 <div class="descripcion">
                     <p class="descuentos">40% OFF</p>
